# bio-agent-bench

./: .dockerignore  .gitignore  Dockerfile.agent  Dockerfile.evaluator  LICENSE  README.md  benchmark.yaml  pyproject.toml
.github/workflows/: tests.yml
docs/: biomysterybench_full_task_guide_cn.md  data_sources.md  evaluation_protocol.md  sandbox.md  task_authoring.md
examples/: baseline_geo_bulk.py  baseline_geo_scrna.py
scripts/: build_docker_images.sh  download_biomysterybench.sh  prepare_geo_tasks.py  run_task_container.sh  score_run_container.sh  score_submission.py  validate_json.py  watch_biomysterybench_full.sh
src/bio_agent_bench/: __init__.py  geo.py  schema.py  score.py  validate.py
tasks/geo_bulk_alms1_ko/: prompt.md  public_notes.md
tasks/geo_bulk_alms1_ko/data/public_geo/: counts.tsv  gene_annotations.tsv  sample_sheet.tsv  source_provenance.json
tasks/geo_scrna_nec_inflammation/: prompt.md  public_notes.md
tasks/geo_scrna_nec_inflammation/data/public_geo/: gene_annotations.tsv  metadata.tsv  sample_sheet.tsv  source_provenance.json
tasks/rec4kcr3oroe3jc1j/: prompt.md  public_notes.md
tasks/rec4kcr3oroe3jc1j/data/public_geo/: RHYTHMIC.txt
tasks/reci6iglwiertmyyk/: expected_output.schema.json  prompt.md  public_notes.md
tasks/recyolnajpygz2xeo/: prompt.md  public_notes.md
tasks/recyolnajpygz2xeo/data/public_geo/: sample1.bed  sample10.bed  sample11.bed  sample12.bed  sample13.bed  sample14.bed  sample15.bed  sample16.bed  sample17.bed  sample18.bed  sample19.bed  sample2.bed  sample20.bed  (+17 more)
tests/: test_geo_tasks.py  test_score.py
